# Project-software-engineering

./: .gitattributes  .gitignore  Doxyfile  README.md  samenvatting werking van het systeem
Documentatie/html/: _file_reader_2_design_by_contract_8h_source.html  _output_2_design_by_contract_8h_source.html  _simulation_2_design_by_contract_8h_source.html  _situation_2_design_by_contract_8h_source.html  _trafic_objects_2_design_by_contract_8h_source.html  annotated.html  annotated_dup.js  baan_8cpp.html  baan_8h.html  baan_8h.js  baan_8h_source.html  bestandslezer_8cpp.html  bestandslezer_8h.html  bestandslezer_8h.js  bestandslezer_8h_source.html  bushalte_8cpp.html  bushalte_8h.html  bushalte_8h_source.html  class_auto-members.html  class_auto.html  class_baan-members.html  class_baan.html  class_baan_test-members.html  class_baan_test.html  class_bestands_lezer-members.html  class_bestands_lezer.html  class_bestands_lezer.js  class_bestands_lezer_test-members.html  class_bestands_lezer_test.html  class_brandweerwagen-members.html  class_brandweerwagen.html  class_brandweerwagen.js  class_bus-members.html  class_bus.html  class_bushalte-members.html  class_bushalte.html  class_bushalte.js  class_bushalte_test-members.html  class_bushalte_test.html  class_bushalte_test.js  (+222 more)
Documentatie/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  enums_0.js  enums_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  (+6 more)
Documentatie/latex/: _file_reader_2_design_by_contract_8h_source.tex  _output_2_design_by_contract_8h_source.tex  _simulation_2_design_by_contract_8h_source.tex  _situation_2_design_by_contract_8h_source.tex  _trafic_objects_2_design_by_contract_8h_source.tex  annotated.tex  baan_8cpp.tex  baan_8h_source.tex  bestandslezer_8cpp.tex  bestandslezer_8h_source.tex  bushalte_8cpp.tex  bushalte_8h.tex  bushalte_8h_source.tex  class_auto.tex  class_baan.tex  class_baan_test.tex  class_bestands_lezer.tex  class_bestands_lezer_test.tex  class_brandweerwagen.tex  class_bus.tex  class_bushalte.tex  class_bushalte_test.tex  class_kruispunt.tex  class_kruispunt_test.tex  class_output_test.tex  class_politiecombi.tex  class_simulatie_test.tex  class_ti_xml_attribute.tex  class_ti_xml_attribute_set.tex  class_ti_xml_base.tex  class_ti_xml_comment.tex  class_ti_xml_declaration.tex  class_ti_xml_document.tex  class_ti_xml_element.tex  class_ti_xml_handle.tex  class_ti_xml_node.tex  class_ti_xml_out_stream.tex  class_ti_xml_parsing_data.tex  class_ti_xml_printer.tex  class_ti_xml_string.tex  (+48 more)
Doxygen/html/: _simulation_2_design_by_contract_8h_source.html  _situation_2_design_by_contract_8h_source.html  _trafic_objects_2_design_by_contract_8h_source.html  annotated_dup.js  baan_8cpp.html  baan_8h_source.html  bestandslezer_8cpp.html  bestandslezer_8h_source.html  bushalte_8cpp.html  bushalte_8h.js  bushalte_8h_source.html  class_auto.html  class_auto.js  class_baan.html  class_baan.js  class_baan_test.html  class_baan_test.js  class_bestands_lezer-members.html  class_bestands_lezer.html  class_bestands_lezer.js  class_bestands_lezer_test.js  class_brandweerwagen.html  class_bus.js  class_bushalte.js  class_bushalte_test.html  class_kruispunt.js  class_kruispunt_test.html  class_output_test.html  class_output_test.js  class_politiecombi.html  class_simulatie_test.html  class_simulatie_test.js  class_ti_xml_attribute.html  class_ti_xml_attribute.js  class_ti_xml_attribute_set.html  class_ti_xml_base.html  class_ti_xml_comment.html  class_ti_xml_comment.js  class_ti_xml_declaration-members.html  class_ti_xml_declaration.html  (+118 more)
Doxygen/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_8.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_4.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  (+5 more)
PSE/: CMakeLists.txt
PSE/PSE/: CMakeLists.txt
PSE/PSE/src/: baan.cpp  baan.h  main_debug.cpp  main_release.cpp  situatie.cpp  situatie.h  verkeerslicht.h  voertuig.cpp  voertuig.h
PSE/src/: baan.cpp  baan.h  bestandslezer.cpp  bestandslezer.h  bushalte.cpp  bushalte.h  main_debug.cpp  main_release.cpp  output.cpp  output.h  simulatie.cpp  simulatie.h  situatie.cpp  situatie.h  verkeerslicht.cpp  verkeerslicht.h  voertuig.cpp  voertuig.h  voertuiggenerator.cpp  voertuiggenerator.h
PSE/src/FileReader/: bestandslezer.cpp  bestandslezer.h
PSE/src/Main/: main_debug.cpp  main_release.cpp
PSE/src/Output/: DesignByContract.h  output.cpp  output.h
PSE/src/Simulation/: simulatie.cpp  simulatie.h
PSE/src/Situation/: DesignByContract.h  situatie.cpp  situatie.h
PSE/src/TraficObjects/: baan.cpp  baan.h  bushalte.cpp  bushalte.h  kruispunt.cpp  kruispunt.h  verkeerslicht.cpp  verkeerslicht.h  voertuig.cpp  voertuig.h  voertuiggenerator.cpp  voertuiggenerator.h
PSE/src/tests/: test_baan.cpp  test_bestandlezer.cpp  test_bushalte.cpp  test_helpers.h  test_kruispunt.cpp  test_output.cpp  test_simulatie.cpp  test_verkeerslicht.cpp  test_verkeerssituatie.cpp  test_voertuig.cpp
Voorbeelden/: basicvoorbeeld.xml  voorbeeld1.xml  voorbeeld2.xml  voorbeeldvolledig.xml
